--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "lint": "eslint ./",
     "build": "webpack",
-    "dev": "webpack-dev-server"
+    "dev": "webpack-dev-server",
+    "api": "node server.js"
   },
   "author": "Vinoth Pandian",
   "license": "MIT",
@@ -21,7 +22,7 @@
     "babel-register": "^6.22.0",
     "clean-webpack-plugin": "^0.1.17",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.27.0",
     "eslint": "^3.14.0",
     "eslint-config-standard": "^6.0.0",
     "eslint-plugin-babel": "^4.0.0",
@@ -29,16 +30,22 @@
     "eslint-plugin-promise": "^3.0.0",
     "eslint-plugin-standard": "^2.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "json-loader": "^0.5.4",
     "style-loader": "^0.13.1",
     "truffle-contract": "^1.1.11",
+    "url-loader": "^0.6.2",
     "web3": "^0.20.0",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta.2",
+    "express": "^4.16.2",
+    "fs": "0.0.1-security",
+    "instascan": "^1.0.0",
     "jquery": "^3.2.1",
     "popper.js": "^1.12.7",
     "react": "^16.1.0",
